--- a/pythonanywhere/templates/login.html
+++ b/pythonanywhere/templates/login.html
@@ -181,6 +181,9 @@
     <script>
         document.addEventListener("DOMContentLoaded", async () => {
             const lastingKey = localStorage.getItem("lasting_key");
+            const urlParams = new URLSearchParams(window.location.search);
+            const redirectUrl = urlParams.get("redirect") || "/index";
+
             if (lastingKey) {
                 const response = await fetch("/login", {
                     method: "POST",
@@ -191,9 +194,9 @@
 
                 if (response.ok) {
                     sessionStorage.setItem("session_key", data.session_key);
-                    window.location.href = "/index";
+                    window.location.href = redirectUrl;
                 } else {
-                    console.log(data)
+                    console.log(data);
                 }
             }
         });
@@ -203,6 +206,8 @@
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
             const rememberMe = document.getElementById("remember-me").checked;
+            const urlParams = new URLSearchParams(window.location.search);
+            const redirectUrl = urlParams.get("redirect") || "/index";
 
             if (!username || !password) {
                 alert("Please enter both username and password.");
@@ -222,12 +227,11 @@
                 if (rememberMe && data.lasting_key) {
                     localStorage.setItem("lasting_key", data.lasting_key);
                 }
-                window.location.href = "/index";
+                window.location.href = redirectUrl;
             } else {
                 alert(data.error || "Login failed");
             }
         });
-
     </script>
 </body>
 </html>
