--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -311,6 +311,7 @@
 
   <script>
     function showAccountMenu() {
+      sessionStorage.setItem("last_page", "/pws")
       window.location.href = "/account_page";
     }
 
