--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -177,6 +177,7 @@
         justify-items: center;
         max-height: 300px;  /* Adjust as needed */
         overflow-y: auto;
+        scrollbar-width: none;
     }
 
     /* Trophy Card Styling */
