--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -262,6 +262,12 @@
         margin: 20px auto;
         width: 95%;
       }
+      #lb-button-container {
+        position: static;
+        text-align: center;
+        margin: 20px auto;
+        width: 95%;
+      }
       .auth-container {
         flex-direction: column;
       }
